реализация API услуг
